--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Your Name | Data Analyst</title>
+  <title>Jarrod Ramsey | Data Analyst</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
@@ -21,7 +21,7 @@
 <body>
 
 <h1>Jarrod Ramsey</h1>
-<p><strong>Data Analyst</strong> · R · SQL · Tableau</p>
+<p><strong>Data Analyst</strong> · R · SQL · Tableau · Microsoft Office ·  </p>
 
 <p>
 I build end-to-end analytics projects using public datasets, 
@@ -31,7 +31,7 @@ focusing on clean data pipelines and actionable insights.
 <h2>Projects</h2>
 <ul>
   <li>
-    <strong>Kaggle Project Name</strong><br/>
+    <strong>Recommend Marketing Strategy by Identifying Behavioral Insights</strong><br/>
     <a href="https://github.com/yourusername/project-repo">GitHub</a>
     · <a href="#">Report</a>
   </li>
@@ -40,7 +40,7 @@ focusing on clean data pipelines and actionable insights.
 <h2>Contact</h2>
 <p>
 <a href="https://github.com/yourusername">GitHub</a> ·
-<a href="https://www.linkedin.com/in/yourname/">LinkedIn</a>
+<p>Email: jarrodramsey202@gmail.com</p>
 </p>
 
 </body>
