--- a/index.html
+++ b/index.html
@@ -32,14 +32,13 @@ focusing on clean data pipelines and actionable insights.
 <ul>
   <li>
     <strong>Recommend Marketing Strategy by Identifying Behavioral Insights</strong><br/>
-    <a href="https://github.com/yourusername/project-repo">GitHub</a>
-    · <a href="#">Report</a>
+    <a href="https://github.com/JR-202/google-analytics-case-study">GitHub</a>
   </li>
 </ul>
 
 <h2>Contact</h2>
 <p>
-<a href="https://github.com/yourusername">GitHub</a> ·
+<a href="https://github.com/yourusername">GitHub</a>
 <p>Email: jarrodramsey202@gmail.com</p>
 </p>
 
